@@ -1,3 +1,14 @@
+2021-06-01  Fujii Hironori  <Hironori.Fujii@sony.com>
+
+        [Win] Remove unused GraphicsContext::hdc()
+        https://bugs.webkit.org/show_bug.cgi?id=226309
+
+        Reviewed by Anders Carlsson.
+
+        * platform/graphics/GraphicsContext.h:
+        * platform/graphics/win/GraphicsContextWin.cpp:
+        (WebCore::GraphicsContext::hdc const): Deleted.
+
 2021-06-01  Cameron McCormack  <heycam@apple.com>
 
         Remove duplicate "behavior for fixed" entry from scrolling state tree logging
